--- a/.github/workflows /sync-image-example.yml
+++ b/.github/workflows /sync-image-example.yml
@@ -27,8 +27,8 @@ jobs:
       uses: docker/login-action@v2.2.0
       with:
         registry: registry.cn-hangzhou.aliyuncs.com
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ 782518522@qq.com }}
+        password: ${{ mengxianlong123. }}
         logout: false
         
     - name: Use Skopeo Tools Sync Image to Docker Hub
