--- a/.github/workflows /sync-image-example.yml
+++ b/.github/workflows /sync-image-example.yml
@@ -27,7 +27,7 @@ jobs:
       uses: docker/login-action@v2.2.0
       with:
         registry: registry.cn-hangzhou.aliyuncs.com
-        username: ${{ 782518522@qq.com }}
+        username: ${{ 孟宪龙ym }}
         password: ${{ mengxianlong123. }}
         logout: false
         
