--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
       uses: docker/login-action@v2.2.0
       with:
         registry: registry.cn-hangzhou.aliyuncs.com
-        username: ${{ 孟宪龙ym }}
-        password: ${{ mengxianlong123. }}
+        username: ${{ '孟宪龙ym' }}
+        password: ${{ 'mengxianlong123.' }}
         logout: false
         
     - name: Use Skopeo Tools Sync Image to Docker Hub
