--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2.2.0
       with:
-        registry: registry.cn-hangzhou.aliyuncs.com
+        registry: registry.cn-hangzhou.aliyuncs.com/image_zm_monitor/dlandon
         username: ${{ '孟宪龙ym' }}
         password: ${{ 'mengxianlong123.' }}
         logout: false
